...
                android:text="@string/female"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <RadioButton
                android:layout_toEndOf="@+id/filter_female_radioButton"
                android:id="@+id/filter_male_radioButton"
                android:text="@string/male"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                />

            <RadioButton
                android:id="@+id/filter_unknown_radioButton"
                android:text="@string/unknown"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </LinearLayout>


...
