<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_margin="15dp"
    android:background = "#FFFFFF"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="22sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- cancel button -->
        <ImageButton
            android:id="@+id/cancel_dialog"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="bottom"
            android:layout_alignParentStart="true"
            android:background = "@null"
            android:src="@drawable/ic_clear_black_48dp"/>


        <!-- confirm button -->
        <ImageButton
            android:id="@+id/accept_dialog"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom"
            android:background = "@null"
            android:src="@drawable/ic_check_black_48dp"/>


    </RelativeLayout>

</LinearLayout>